--- a/error/403.html
+++ b/error/403.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="de-at" id="html" data-bs-theme="light">
+<html data-bs-theme="light" id="html" lang="de-at">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../external/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <script src="../external/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="../external/jquery-3.7.1.min.js" crossorigin="anonymous"></script>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link crossorigin="anonymous" href="../external/bootstrap.min.css" rel="stylesheet">
+    <script crossorigin="anonymous" src="../external/bootstrap.bundle.min.js"></script>
+    <script crossorigin="anonymous" src="../external/jquery-3.7.1.min.js"></script>
     <script src="../external/js.cookie.min.js"></script>
-    <link rel="stylesheet" href="../styles/main.css"/>
+    <link href="../styles/main.css" rel="stylesheet"/>
     <title>403 - FORBIDDEN</title>
 </head>
 
